# rally-point2

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml  promote-coordinator.yml  promote-relay.yml  publish-coordinator.yml  publish-relay.yml  terraform.yml
client/: Cargo.toml
client/src/: dial.rs  directive.rs  driver.rs  identity.rs  leave.rs  leave_announcer.rs  lib.rs
client/tests/: home_relay.rs
coordinator/: Cargo.toml  Dockerfile
coordinator/src/: acme.rs  api.rs  descriptors.rs  flight_store.rs  identity.rs  ledger.rs  lib.rs  lifecycle.rs  main.rs  metrics.rs  notify.rs  pair_rtts.rs  presence.rs  regions.rs  registry.rs  rehome.rs  session.rs  tenant.rs  tenant_config.rs
coordinator/src/provision/: ecs.rs  mod.rs  process.rs  reconcile.rs  warm.rs
coordinator/tests/: descriptor_transport.rs  enroll_identity.rs  ledger_enroll.rs
coordinator/tests/common/: mod.rs
dev-beacon/: Cargo.toml
dev-beacon/src/: main.rs
docs/: architecture.md  performance.md  staging-load-baseline-2026-07.md
infra/: README.md
infra/terraform/: .gitignore  README.md  region-catalog.json
infra/terraform/account/: account.s3.tfbackend  main.tf  outputs.tf  providers.tf  variables.tf  versions.tf
infra/terraform/fleet/: locals.tf  main.tf  outputs.tf  providers.tf  regions.tf  variables.tf  versions.tf
infra/terraform/fleet/environments/: prod.s3.tfbackend  prod.tfvars  staging.s3.tfbackend  staging.tfvars
infra/terraform/fleet/modules/region/: main.tf  outputs.tf  variables.tf
loadgen/: Cargo.toml  README.md
loadgen/src/: cli.rs  create.rs  lifecycle.rs  main.rs  metrics.rs  player.rs  session.rs  signing.rs  turn.rs
proto/: Cargo.toml  build.rs
proto/proto/: wire.proto
proto/src/: beacon.rs  commands.rs  control.rs  control_stream.rs  handshake.rs  ids.rs  lib.rs  mesh.rs  token.rs  version.rs  wire.rs
relay/: Cargo.toml  Dockerfile
relay/benches/: hot_paths.rs
relay/examples/: sim_consensus.rs
relay/fuzz/: Cargo.toml
relay/fuzz/fuzz_targets/: validate_turn.rs
relay/src/: auth.rs  buffer_law_sim.rs  chat.rs  config.rs  consensus.rs  coordinator_client.rs  delivery.rs  drop_hold.rs  flight_recorder.rs  flight_upload.rs  idle_exit.rs  leave_grace.rs  lib.rs  lobby.rs  main.rs  mesh.rs  mesh_control.rs  mesh_dialer.rs  mesh_edge.rs  presence.rs  provisional.rs  region_ping.rs  routing.rs  server.rs  skin.rs  task_stats.rs  turn_ring.rs  validation.rs
relay/tests/: client_edge.rs  idle_self_reap_e2e.rs  mesh_edge.rs  mesh_edge_connection.rs  provisioner_e2e.rs  relay_binary.rs
transport/: Cargo.toml
transport/benches/: hot_paths.rs
transport/src/: ack_manager.rs  beacon.rs  control.rs  lib.rs  link.rs  mesh_control_stream.rs  mesh_link.rs  quic.rs  sequence_buffer.rs
