[workspace]
resolver = "3"
members = ["proto", "transport", "client", "relay", "coordinator"]
# `infra/` (Fargate / beacon IaC, Phase 5) is intentionally NOT a workspace
# member — its tooling (CDK vs Terraform vs Pulumi) is undecided and is not Rust.

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
authors = ["ShieldBattery"]
repository = "https://github.com/ShieldBattery/rally-point2"

[workspace.dependencies]
# --- Internal crates ---
rally-point-proto = { path = "proto" }
rally-point-transport = { path = "transport" }
rally-point-client = { path = "client" }
rally-point-relay = { path = "relay" }

# --- Async runtime & QUIC transport ---
tokio = { version = "1.52", features = [
  "rt-multi-thread",
  "macros",
  "net",
  "sync",
  "time",
] }
# QUIC via quinn. Pinned to the rustls + ring backend rather than the default
# aws-lc-rs to avoid the C/NASM toolchain requirement on Windows MSVC — the
# `client` crate must also build for `i686-pc-windows-msvc` inside the game DLL.
# Declared here as the frozen choice; wired into client/relay in Phase 1, at
# which point these feature names must be confirmed against the resolved quinn.
quinn = { version = "0.11", default-features = false, features = [
  "runtime-tokio",
  "rustls-ring",
  "log",
] }
bytes = "1.12"
byteorder = "1.5"
# Dual-stack UDP socket construction for the client endpoint: std's UdpSocket
# can't clear IPV6_V6ONLY, which a v6 socket needs to also reach IPv4 relays.
# Already in the tree transitively via quinn; pinned to the same major.
socket2 = "0.6"
# TLS for QUIC. Pinned to the ring provider (no aws-lc-rs) to match the quinn
# backend and keep the 32-bit client build free of a C/NASM toolchain.
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
# PEM cert/key file reading for the relay binary (loads --cert/--key files).
rustls-pemfile = "2"
# Self-signed certs for transport loopback tests (dev-only). Uses ring, not the
rcgen = { version = "0.14", default-features = false, features = ["crypto", "ring", "pem"] }
# Hex encode/decode for the relay/coordinator binaries' tenant-key CLI flags.
hex = "0.4"
# Ed25519 verification (token signatures + the connection-binding challenge) and
# the secure RNG for challenge nonces on the relay. Reuses ring — already the
# pinned QUIC crypto provider — so there's no second curve25519 backend to audit
# and nothing new to make build for the 32-bit client target.
ring = "0.17"

# --- Serialization ---
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Protobuf runtime for the generated wire messages (proto crate).
prost = "0.14"

# --- Protobuf codegen (build-time, proto crate's build.rs) ---
# protox is a pure-Rust protobuf compiler, so no `protoc` binary is needed and
# the build script avoids the `unsafe { env::set_var("PROTOC", ...) }` that the
# vendored-protoc approach forces under edition 2024 + our deny-unsafe lint.
prost-build = "0.14"
protox = "0.9"

# --- Errors ---
thiserror = "2.0"
color-eyre = "0.6"

# Synchronization primitives for short, await-free critical sections (relay
# session/mesh rosters). `parking_lot::Mutex` returns a guard directly — no
# poisoning error to unwrap — so a roster edit reads as a lock, not error
# handling. Guards held across `.await` stay on `tokio::sync`.
parking_lot = "0.12"

# --- Observability ---
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# --- CLI ---
clap = { version = "4.6", features = ["derive", "env"] }
# --- HTTP (coordinator control plane) ---
# axum is the coordinator's app-server + relay control API. The coordinator is
# control-plane only (low-frequency JSON over HTTP), so a lightweight Tokio
# web framework is the right tool — no need for a QUIC control channel.
axum = { version = "0.8", default-features = false, features = [
  "http1",
  "tokio",
  "json",
  # The relay holds a persistent control connection to the coordinator over a
  # WebSocket on this same server — bidirectional, so the coordinator pushes
  # descriptors down and (later) the relay reports liveness up the one channel.
  "ws",
] }
# tower's `ServiceExt::oneshot` drives the coordinator's HTTP router in tests
# without binding a socket.
tower = { version = "0.5", default-features = false }
# The coordinator's departure webhook client (coordinator → tenant app server).
# Built directly on hyper + hyper-util rather than reqwest: hyper is already in
# the tree via axum, so no new transitive crypto stack is pulled — the workspace
# deliberately pins ring-only TLS (no aws-lc-rs, which breaks the 32-bit /
# NASM-free Windows MSVC build), and reqwest's rustls provider selection is
# fragile against that pin. This client is plain-HTTP (`build_http`), which is
# sufficient for the dev notify flow; an https notify URL would need a rustls
# (ring) connector wired in — a prod TODO, called out at the client.
hyper = { version = "1.10", default-features = false, features = ["client", "http1"] }
hyper-util = { version = "0.1", default-features = false, features = [
  "client-legacy",
  "http1",
  "tokio",
] }
http-body-util = "0.1"
# WebSocket client for the relay's persistent control connection to the
# coordinator. `rustls-tls-webpki-roots` enables wss:// over rustls; the crate
# brings rustls/tokio-rustls with default-features off, so it rides this
# workspace's pinned **ring** provider (its `ClientConfig::builder()` uses the
# single compiled provider) — no aws-lc-rs, no second crypto stack, no NASM.
# webpki public roots cover wss against a publicly-trusted coordinator cert; an
# internal-CA / custom-root config is part of the deferred relay-trust work.
# Pinned to the same 0.29 axum's `ws` feature already pulls, so the tree carries
# one copy, not two.
tokio-tungstenite = { version = "0.29", default-features = false, features = [
  "connect",
  "handshake",
  "rustls-tls-webpki-roots",
] }
# `StreamExt::next` to read the relay's WebSocket control stream and `SinkExt::send`
# to send its enroll Hello (and, later, liveness) back up the same connection.
futures-util = { version = "0.3", default-features = false, features = [
  "std",
  "sink",
] }

[workspace.lints.rust]
# The hot-path FFI / cross-thread handoff lives in `shieldbattery/game/`, not
# here — these crates stay `unsafe`-free. A crate that genuinely needs FFI can
# override this locally with `#![allow(unsafe_code)]`.
unsafe_code = "deny"

[profile.release]
# Keep line tables in release builds for usable prod stack traces / flight
# recorder symbolication (matches `shieldbattery/game` + `server-rs`).
debug = 1
