[workspace]
resolver = "3"
members = ["proto", "transport", "client", "relay", "coordinator", "dev-beacon", "loadgen"]
# `infra/` (Fargate / beacon IaC, Phase 5) is intentionally NOT a workspace
# member — its tooling (CDK vs Terraform vs Pulumi) is undecided and is not Rust.

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
authors = ["ShieldBattery"]
repository = "https://github.com/ShieldBattery/rally-point2"

[workspace.dependencies]
# --- Internal crates ---
rally-point-proto = { path = "proto" }
rally-point-transport = { path = "transport" }
rally-point-client = { path = "client" }
rally-point-relay = { path = "relay" }

# --- Async runtime & QUIC transport ---
tokio = { version = "1.52", features = [
  "rt-multi-thread",
  "macros",
  "net",
  "sync",
  "time",
] }
# QUIC via quinn. Pinned to the rustls + ring backend rather than the default
# aws-lc-rs to avoid the C/NASM toolchain requirement on Windows MSVC — the
# `client` crate must also build for `i686-pc-windows-msvc` inside the game DLL.
# Declared here as the frozen choice; wired into client/relay in Phase 1, at
# which point these feature names must be confirmed against the resolved quinn.
quinn = { version = "0.11", default-features = false, features = [
  "runtime-tokio",
  "rustls-ring",
  "log",
] }
bytes = "1.12"
byteorder = "1.5"
# Dual-stack UDP socket construction for the client endpoint: std's UdpSocket
# can't clear IPV6_V6ONLY, which a v6 socket needs to also reach IPv4 relays.
# Already in the tree transitively via quinn; pinned to the same major.
socket2 = "0.6"
# TLS for QUIC. Pinned to the ring provider (no aws-lc-rs) to match the quinn
# backend and keep the 32-bit client build free of a C/NASM toolchain.
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
# PEM cert/key file reading for the relay binary (loads --cert/--key files).
rustls-pemfile = "2"
# X.509 signature verification, ring-backed, already resolved transitively via
# rustls: the coordinator uses `webpki::EndEntityCert` to verify a relay's
# enroll proof-of-possession signature against its presented certificate,
# without pulling in a second X.509 stack.
rustls-webpki = { version = "0.103", default-features = false, features = [
  "ring",
  "std",
] }
# The `CertificateDer` type `rustls-webpki`'s `EndEntityCert` is built from —
# depended on directly (not only via `rustls::pki_types`) so the coordinator,
# which has no other rustls dependency, can wrap a relay's raw cert bytes.
rustls-pki-types = "1"
# Self-signed certs for transport loopback tests (dev-only). Uses ring, not the
rcgen = { version = "0.14", default-features = false, features = ["crypto", "ring", "pem"] }
# Hex encode/decode for the relay/coordinator binaries' tenant-key CLI flags.
hex = "0.4"
# Ed25519 verification (token signatures + the connection-binding challenge) and
# the secure RNG for challenge nonces on the relay. Reuses ring — already the
# pinned QUIC crypto provider — so there's no second curve25519 backend to audit
# and nothing new to make build for the 32-bit client target.
ring = "0.17"

# --- Serialization ---
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Compresses each flight recording before the relay uploads it to durable storage,
# so a recording rides the network (and the store) as a compact zstd-of-JSON blob
# rather than verbose JSON text. Relay-only (the coordinator never sees the bytes —
# it only mints the upload URL). Uses the default compression level: a recording is
# structured, repetitive JSON that compresses heavily even at the default, and the
# flush path is rare (session close / drain), so trading a higher level's marginal
# ratio for its CPU is not worth it.
zstd = "0.13"
# Protobuf runtime for the generated wire messages (proto crate).
prost = "0.14"

# --- Protobuf codegen (build-time, proto crate's build.rs) ---
# protox is a pure-Rust protobuf compiler, so no `protoc` binary is needed and
# the build script avoids the `unsafe { env::set_var("PROTOC", ...) }` that the
# vendored-protoc approach forces under edition 2024 + our deny-unsafe lint.
prost-build = "0.14"
protox = "0.9"

# --- Errors ---
thiserror = "2.0"
color-eyre = "0.6"

# Synchronization primitives for short, await-free critical sections (relay
# session/mesh rosters). `parking_lot::Mutex` returns a guard directly — no
# poisoning error to unwrap — so a roster edit reads as a lock, not error
# handling. Guards held across `.await` stay on `tokio::sync`.
parking_lot = "0.12"

# --- Observability ---
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# --- CLI ---
clap = { version = "4.6", features = ["derive", "env"] }
# --- HTTP (coordinator control plane) ---
# axum is the coordinator's app-server + relay control API. The coordinator is
# control-plane only (low-frequency JSON over HTTP), so a lightweight Tokio
# web framework is the right tool — no need for a QUIC control channel.
axum = { version = "0.8", default-features = false, features = [
  "http1",
  "tokio",
  "json",
  # The relay holds a persistent control connection to the coordinator over a
  # WebSocket on this same server — bidirectional, so the coordinator pushes
  # descriptors down and (later) the relay reports liveness up the one channel.
  "ws",
] }
# In-process automatic TLS for the coordinator's control-plane listener: when a
# public domain is configured, the coordinator obtains and renews its Let's
# Encrypt certificate itself over the TLS-ALPN-01 challenge answered on the same
# listening port — no separate challenge port, no external agent, no reverse
# proxy. Terminating TLS in the coordinator is required, not a convenience: relay
# enrollment authorizes a control connection against the transport peer address
# recorded when the relay was provisioned, and a TLS-terminating proxy in front
# would replace every peer address with its own. `default-features = false` drops
# the crate's default aws-lc-rs crypto backend; `ring` selects this workspace's
# single crypto provider instead, keeping the tree free of aws-lc-rs and the
# C/NASM toolchain the 32-bit client build avoids. `axum` pulls the axum-server
# integration whose acceptor runs the ACME TLS handshake under the existing
# router; `webpki-roots` supplies the public CA roots the ACME client validates
# the Let's Encrypt API against. Coordinator-only.
rustls-acme = { version = "0.15", default-features = false, features = [
  "ring",
  "axum",
  "webpki-roots",
] }
# The HTTP server the rustls-acme acceptor plugs into (`bind(addr).acceptor(..)`),
# and the piece that carries each connection's real transport peer address into
# `ConnectInfo<SocketAddr>` before the TLS handshake runs, so the enrollment gate
# still sees real peers under TLS. `default-features = false` leaves its crypto
# provider unselected — rustls-acme enables its `tls-rustls-no-provider` feature,
# which never pulls aws-lc-rs. Coordinator-only.
axum-server = { version = "0.8", default-features = false }
# tower's `ServiceExt::oneshot` drives the coordinator's HTTP router in tests
# without binding a socket.
tower = { version = "0.5", default-features = false }
# The coordinator's departure webhook client (coordinator → tenant app server).
# Built directly on hyper + hyper-util rather than reqwest: hyper is already in
# the tree via axum, so no new transitive crypto stack is pulled — the workspace
# deliberately pins ring-only TLS (no aws-lc-rs, which breaks the 32-bit /
# NASM-free Windows MSVC build), and reqwest's rustls provider selection is
# fragile against that pin.
hyper = { version = "1.10", default-features = false, features = ["client", "http1"] }
hyper-util = { version = "0.1", default-features = false, features = [
  "client-legacy",
  "http1",
  "tokio",
] }
http-body-util = "0.1"
# HTTPS for the webhook client: wraps the plain-HTTP connector so an
# `https://` notify URL works too (the prod app server sits behind an HTTPS
# reverse proxy). `ring` (not the default `aws-lc-rs`) keeps the crypto
# provider the same one already pinned for QUIC/mesh TLS; `webpki-roots`
# (public CA roots) is sufficient because the proxy's cert is publicly
# trusted, not a private/internal CA.
hyper-rustls = { version = "0.27", default-features = false, features = [
  "http1",
  "ring",
  "webpki-roots",
] }
# Standard (padded) base64 for the webhook's `x-rp2-signature` header, and
# URL-safe base64 (no padding) for the coordinator's minted enroll tokens.
base64 = "0.22"
# The coordinator's provisioned-relay ledger: a small local SQLite store of
# minted relay identities + one-time enroll tokens. `bundled` compiles SQLite
# from source so no system libsqlite3 is needed. Coordinator-only — the game
# DLL's `rally-point-client` must keep building for `i686-pc-windows-msvc`
# without a C/SQLite dependency, so this stays out of that crate's tree.
rusqlite = { version = "0.37", features = ["bundled"] }
# WebSocket client for the relay's persistent control connection to the
# coordinator. `rustls-tls-webpki-roots` enables wss:// over rustls; the crate
# brings rustls/tokio-rustls with default-features off, so it rides this
# workspace's pinned **ring** provider (its `ClientConfig::builder()` uses the
# single compiled provider) — no aws-lc-rs, no second crypto stack, no NASM.
# webpki public roots cover wss against a publicly-trusted coordinator cert; an
# internal-CA / custom-root config is part of the deferred relay-trust work.
# Pinned to the same 0.29 axum's `ws` feature already pulls, so the tree carries
# one copy, not two.
tokio-tungstenite = { version = "0.29", default-features = false, features = [
  "connect",
  "handshake",
  "rustls-tls-webpki-roots",
] }
# `StreamExt::next` to read the relay's WebSocket control stream and `SinkExt::send`
# to send its enroll Hello (and, later, liveness) back up the same connection.
futures-util = { version = "0.3", default-features = false, features = [
  "std",
  "sink",
] }

# --- AWS SDK (coordinator-only Fargate substrate) ---
# The ECS/EC2 clients the coordinator launches and inspects relay tasks with.
# `default-features = false` drops the SDK's bundled default HTTPS client, which
# selects the aws-lc-rs crypto provider — aws-lc-rs needs a C/NASM toolchain that
# the 32-bit Windows client build (and this workspace's ring-only pin) deliberately
# avoids. The HTTPS connector is supplied explicitly from `aws-smithy-http-client`
# below on the ring provider instead, so the tree grows no aws-lc-rs / openssl /
# native-tls path. `behavior-version-latest` lets the config pin the newest client
# behavior without naming a dated version; `rt-tokio` supplies the Tokio timers the
# SDK's retry/timeout machinery needs. Coordinator-only: kept out of every other
# crate's tree (the game DLL's `rally-point-client` must keep building for
# `i686-pc-windows-msvc` without this graph), the same isolation `rusqlite` holds.
aws-config = { version = "1.8", default-features = false, features = [
  "rt-tokio",
  "behavior-version-latest",
] }
aws-sdk-ecs = { version = "1.111", default-features = false, features = [
  "rt-tokio",
  "behavior-version-latest",
] }
aws-sdk-ec2 = { version = "1.208", default-features = false, features = [
  "rt-tokio",
  "behavior-version-latest",
] }
# The flight-recorder durable sink: the coordinator stores the observability blobs
# relays ship up their control connections into a DigitalOcean Spaces bucket over the
# S3 API. Declared exactly like the ECS/EC2 clients — `default-features = false` drops
# the SDK's bundled aws-lc-rs HTTPS client, and the ring connector from
# `aws-smithy-http-client` is supplied explicitly at construction — so the S3 client
# reuses the workspace's single crypto backend and the tree grows no aws-lc-rs path.
# Pinned exactly so adding it leaves the shared `aws-smithy-*` versions the other SDK
# clients resolved untouched. Coordinator-only.
aws-sdk-s3 = { version = "=1.119.0", default-features = false, features = [
  "rt-tokio",
  "behavior-version-latest",
] }
# The explicit HTTPS connector for the SDK clients, pinned to the rustls **ring**
# provider so the AWS graph reuses the workspace's single crypto backend instead
# of pulling aws-lc-rs.
aws-smithy-http-client = { version = "1.1", default-features = false, features = [
  "rustls-ring",
] }

[workspace.lints.rust]
# The hot-path FFI / cross-thread handoff lives in `shieldbattery/game/`, not
# here — these crates stay `unsafe`-free. A crate that genuinely needs FFI can
# override this locally with `#![allow(unsafe_code)]`.
unsafe_code = "deny"

[profile.release]
# Keep line tables in release builds for usable prod stack traces / flight
# recorder symbolication (matches `shieldbattery/game` + `server-rs`).
debug = 1
