[package]
name = "rally-point-coordinator"
description = "Multi-tenant netcode v2 control plane: relay registry, session setup, per-tenant tokens/quotas, and consensus policy."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
axum = { workspace = true }
rally-point-proto = { workspace = true }
parking_lot = { workspace = true }
ring = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
color-eyre = { workspace = true }
hex = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
rally-point-relay = { workspace = true }
tower = { workspace = true }
# A raw WebSocket client for the control-endpoint tests (e.g. a connection that
# never sends its enroll Hello), which the relay's own client can't express.
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
