[package]
name = "dev-beacon"
description = "Loopback stand-in for per-region ping endpoints: a delayed UDP echo plus an accept-and-close TCP listener, so latency-based region ranking is exercisable without real infrastructure."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
color-eyre = { workspace = true }
