[package]
name = "rally-point-proto"
description = "Shared wire framing, control-plane messages, tokens, protocol versioning, and the SC:R command table for ShieldBattery netcode v2."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
