[package]
name = "rally-point-proto"
description = "Shared wire framing, control-plane messages, tokens, protocol versioning, and the SC:R command table for ShieldBattery netcode v2."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
prost = { workspace = true }
bytes = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }
protox = { workspace = true }
[dev-dependencies]
serde_json = { workspace = true }
